<resources>
    <string name="app_name">BaiTapNangCao</string>
    <string name="login">Login</string>
    <string name="username">Username: </string>
    <string name="pass">Password: </string>
    <string name="fullname">Fullname:  </string>
    <string name="email">Email:    </string>
    <string name="address">Address:   </string>
    <string name="phone">Phone:    </string>
    <string name="sex">Sex: </string>
</resources>
